# NebulaPax

./: NebulaPax.sln  README.md
Core/: Core.vcxproj  Core.vcxproj.filters  window.cpp  window.h
Editor/: Editor.vcxproj  main.cpp
NebulaPax/: CMakeLists.txt  NebulaPax.cpp  NebulaPax.vcxproj  NebulaPax.vcxproj.filters
NebulaPax/NebulaPax/: CMakeLists.txt  NebulaPax.cpp
